--- a/src/styles/Body.css
+++ b/src/styles/Body.css
@@ -1,9 +1,28 @@
 .body {
   max-width: 80%;
   display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
+  flex-direction: column;
   background-color: #fff;
   margin: 10px 0;
   margin: 0 auto;
+}
+
+.filter {
+  margin: 20px 0;
+  font-size: 20px;
+  align-self: center;
+}
+
+.top-rated {
+  padding: 0 8px;
+  font-weight: 600;
+  cursor: pointer;
+  background-color: orange;
+  border-radius: 6px;
+}
+
+.restaurant-layout{
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
