Replaced anchor selector with class link

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -20,12 +20,12 @@ li {
   list-style-type: none;
 }
 
-a {
+.link {
   text-decoration: none;
   color: #fff;
 }
 
-a:hover {
+.link:hover {
   color: #ffa500;
 }
 
