--- a/src/styles/Restaurant.css
+++ b/src/styles/Restaurant.css
@@ -1,15 +1,13 @@
 .restaurant {
   display: flex;
   flex-direction: column;
-  width: 18%;
-  cursor: pointer;
-  margin: 4px;
+  border-radius: 16px;
   background-color: rgb(0, 0, 0, 0.02);
 }
 
 .restaurant:hover {
   transform: scale(0.96);
-  background-color: #fff;
+  background-color: rgb(0, 0, 0, 0.08);
 }
 
 .restaurant-image {
