--- a/src/styles/RestaurantMenu.css
+++ b/src/styles/RestaurantMenu.css
@@ -1,5 +1,5 @@
 .restaurant-menu {
-  width: 50%;
+  width: 40%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -9,4 +9,24 @@
 .dash {
   width: 100%;
   border-top: 1px dashed black;
+}
+
+.restaurant-menu-details {
+  display: flex;
+  justify-content: space-between;
+}
+
+.detail {
+  line-height: 1.3;
+}
+
+.rating{
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  align-items: center;
+  border: 1px solid rgba(128, 128, 128, 0.748);
+  padding: 8px;
+  line-height: 1.5;
+  border-radius: 8px;
 }
