--- a/src/styles/RestaurantMenu.css
+++ b/src/styles/RestaurantMenu.css
@@ -20,7 +20,7 @@
   line-height: 1.3;
 }
 
-.rating{
+.rating {
   display: flex;
   flex-direction: column;
   align-self: center;
@@ -29,4 +29,24 @@
   padding: 8px;
   line-height: 1.5;
   border-radius: 8px;
+}
+
+.offers-menu {
+  display: flex;
+  gap: 20px;
+  overflow-x: scroll;
+}
+
+.offer {
+  border: 1px solid rgba(128, 128, 128, 0.748);
+  border-radius: 12px;
+  text-align: center;
+  flex: 0 0 260px;
+  padding: 10px;
+  height: 60px;
+  line-height: 1.2;
+}
+
+.offer-title{
+  font-weight: 600;
 }
